"fix: corrigindo legibilidade das stack"

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,9 @@
 
 @theme {
   --font-display: "Urbanist", sans-serif;
+  --font-rubik: "Rubik", sans-serif;
 }
+
 
 .tech {
   @apply text-7xl max-md:text-2xl max-lg:text-5xl;
